Fixing menus to be scrollable when they overflow
When there is not enough vertical room in the browser window for a
menu to fully fit, its body is supposed to vertically scroll.
However, commit fefa43ee3b2332dbb9d82999e4372c1830375309 broke
this functionality; this commit restores it.

--- a/css/city_tour.css
+++ b/css/city_tour.css
@@ -125,6 +125,7 @@ input[type="range"] {
 
 .width-full { width: 100%; }
 .height-full { height: 100%; }
+.max-height-full { max-height: 100%; }
 .relative { position: relative; }
 .absolute { position: absolute; }
 .block { display: block; }
